testsuites/LLT/compiler/Diagnose/lex_test/lex_expected_left_bracket/case14.expect.out
error: expected '{' in unicode escape, found '"'
  ==> case14.cj:16:19:
   | 
16 | \n cangjie2 ${ "\u"
   |                 ~~^ expected '{'
   |                 |
   |                 because it is in this Unicode escape
   | 

1 error generated, 1 error printed.
